--- a/Requirements.txt
+++ b/Requirements.txt
@@ -4,3 +4,9 @@ numpy==1.26.4
 pandas==2.2.3
 tqdm==4.65.2
 transformers==4.49.0
+jiwer
+accelerate
+tensorboard
+sentencepiece
+tiktoken
+Levenshtein
